# OsuTelegram

./: .gitignore  README.md
contact_keypad/: config.h  info.json
contact_keypad/mdl/: case bottom.SLDPRT  case bottom.STL  case top.SLDPRT  case top.STL  key.SLDPRT  key.STL
hall_effect/: CMakeLists.txt
hall_effect/.cache/clangd/index/: main.cpp.51B2A024A1E7A6D2.idx
hall_effect/mdl/: case bottom.SLDPRT  case top.SLDPRT  case top.STL  key.SLDPRT
hall_effect/src/: main.c  main.cpp  main.hpp  pi_flash.sh  thing.h  usb_descriptors.c
mdl/: case bottom.STL  key.SLDPRT  keypad assembly.SLDASM
osu_telegram/: osu_telegram.c  osu_telegram.h  rules.mk
osu_telegram/keymaps/default/: keymap.c
src/: main.c  main.cpp
